@@ -1,3 +1,11 @@
+2006-12-26 Jens Tkotz <jens@peino.de> 1.6-alpha3-svn-b31
+
+ * Fix/CHANGE: Made tempfolder for captcha relative to albumdir.
+			   This makes it possible to use a full url.
+
+
+ * Change: Disable maxtry parameter
+
 2006-12-26 Jens Tkotz <jens@peino.de> 1.6-alpha3-svn-b30
 
  * Change: If target is absolute, dont make it "more" absolute.
